# mailguard-rs

./: Cargo.toml  LICENSE  README.md  README.zh.md
.github/: copilot-instructions.md
examples/: advanced_usage.rs  simple_usage.rs
src/: cache.rs  detector.rs  dns.rs  error.rs  lib.rs  main.rs  threat.rs
tests/: cache_tests.rs  integration_tests.rs
